# video-to-photo-capture

./: Dockerfile  README.md  docker-compose.yaml  index.html  package-lock.json  package.json
.github/workflows/: build-android.yml  test-build.yml
src/: script.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/native-android-ext/: settings.gradle.kts
src-tauri/plugins/native-android-ext/app/: build.gradle.kts
src-tauri/plugins/native-android-ext/gradle/: libs.versions.toml
src-tauri/plugins/tauri-plugin-ext/: Cargo.toml  README.md  build.rs
src-tauri/plugins/tauri-plugin-ext/android/: build.gradle.kts  proguard-rules.pro  settings.gradle
src-tauri/plugins/tauri-plugin-ext/android/src/androidTest/java/: ExampleInstrumentedTest.kt
src-tauri/plugins/tauri-plugin-ext/android/src/main/java/: ExtPlugin.java
src-tauri/plugins/tauri-plugin-ext/android/src/main/res/values/: strings.xml
src-tauri/plugins/tauri-plugin-ext/android/src/test/java/: ExampleUnitTest.kt  MessageUnitTest.java
src-tauri/plugins/tauri-plugin-ext/permissions/: default.toml
src-tauri/plugins/tauri-plugin-ext/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-ext/permissions/autogenerated/commands/: save-to-gallery.toml
src-tauri/plugins/tauri-plugin-ext/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-ext/src/: desktop.rs  lib.rs  mobile.rs
src-tauri/src/: lib.rs  main.rs
(+15 files in other folders)
